--- a/check_apache_version.yml
+++ b/check_apache_version.yml
@@ -1,3 +1,4 @@
+
 ---
 - name: Check and Update Apache Version
   hosts: all
@@ -34,12 +35,27 @@
         state: absent
 
   post_tasks:
-    - name: Create lists of hosts based on exit codes
+    - name: Create success hosts list
       ansible.builtin.shell: |
-        awk -F, '$3 == "0" {print $1} > {{ result_dir }}/success_hosts.txt; \
-        awk -F, '$3 != "0" {print $1} > {{ result_dir }}/failed_hosts.txt; \
-        echo $(wc -l < {{ result_dir }}/success_hosts.txt) > {{ result_dir }}/success_count.txt; \
-        echo $(wc -l < {{ result_dir }}/failed_hosts.txt) > {{ result_dir }}/failed_count.txt'
+        awk -F, '$3 == "0" {print $1}' > {{ result_dir }}/success_hosts.txt
+      run_once: true
+      delegate_to: localhost
+
+    - name: Create failed hosts list
+      ansible.builtin.shell: |
+        awk -F, '$3 != "0" {print $1}' > {{ result_dir }}/failed_hosts.txt
+      run_once: true
+      delegate_to: localhost
+
+    - name: Count success hosts
+      ansible.builtin.shell: |
+        wc -l < {{ result_dir }}/success_hosts.txt > {{ result_dir }}/success_count.txt
+      run_once: true
+      delegate_to: localhost
+
+    - name: Count failed hosts
+      ansible.builtin.shell: |
+        wc -l < {{ result_dir }}/failed_hosts.txt > {{ result_dir }}/failed_count.txt
       run_once: true
       delegate_to: localhost
 
